@@ -7,25 +7,21 @@ import com.producter.playermanager.exception.NotFoundException;
 import com.producter.playermanager.exception.generic.GenericExistException;
 import com.producter.playermanager.model.Team;
 import com.producter.playermanager.repository.TeamRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class TeamService {
 
     private final TeamRepository teamRepository;
     private final TeamConverter teamConverter;
 
-    public TeamService(TeamRepository teamRepository, TeamConverter teamConverter) {
-        this.teamRepository = teamRepository;
-        this.teamConverter = teamConverter;
-    }
-
-    public TeamDto save(CreateTeamRequest request) {
+    public TeamDto createTeam(CreateTeamRequest request) {
         var saved = teamConverter.toEntity(request);
         if (teamRepository.existsTeamByName(saved.getName())) {
             throw new GenericExistException("User already exist, mail: " + saved.getName());
@@ -34,16 +30,16 @@ public class TeamService {
         return teamConverter.convertDto(saved);
     }
 
-    public List<TeamDto> getAll(int page, int size){
+    public List<TeamDto> getAllTeams(int page, int size){
         Pageable pageable = PageRequest.of(page,size);
 
         return teamRepository.findAll(pageable)
                 .stream()
                 .map(teamConverter::convertDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void delete(String name) {
+    public void deleteTeam(String name) {
         var team = getTeamByName(name);
         teamRepository.delete(team);
     }
